fixed gallery titles taking up too much space

--- a/css/style.css
+++ b/css/style.css
@@ -314,13 +314,13 @@ width: 100%;
    font-size: 1.5em;
    text-align: center;
    font-weight: 300;
-   margin-bottom: 0;
+   max-width:var();
+   margin: 0 auto;
    color: var(--dark-grey);
-   font-size: 35pt;
+   font-size: 25pt;
 }
 
 .gallery-items p {
-   width: 60%;
    margin-left: auto;
    margin-right: auto;
 }
